--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "social",
   "version": "1.0.0",
-  "description": "",
+  "description": "A CRUD API for a make-shift social media network",
   "main": "index.js",
   "scripts": {
+    "build": "npx tsc",
+    "start": "npm run build && node dist/server.js",
+    "seed": "npm run build && node  dist/utils/seed.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
